@@ -22,6 +22,14 @@ o Upgrading from a version prior to <release>:
     - pfcmd exit status
     Some exit status of pfcmd changed regarding the config sub-command.
 
+    - new trigger types (no more scan type)
+    The trigger type "Scan" has been removed to leave place to two new types 
+    (Nessus and Openvas). Due to that change, modification to existing 
+    violations.conf is required to change all existing "Scan" type to "Nessus".
+    You can run the following command that will do the job. Make sure to backup
+    your existing violations.conf file.
+    /usr/bin/perl -p -i -e "s/Scan::/Nessus::/g" /usr/local/pf/conf/violations.conf
+
 o Upgrading from a version prior to 3.1.0:
 
     - rogue DHCP server violation
