@@ -27,7 +27,7 @@ priority=4
 url=/remediation.php?template=failed_scan
 max_enable=4
 button_text=Scan my computer again
-trigger=Scan::10861,Scan::10943,Scan::11177,Scan::11231,Scan::11302,Scan::11304,Scan::11528,Scan::11595,Scan::11664,Scan::11787,Scan::11790,Scan::11803,Scan::11808,Scan::11835,Scan::11878,Scan::11886,Scan::11887,Scan::11921,Scan::12051,Scan::12052,Scan::12054,Scan::12092,Scan::12208,Scan::12209,Scan::13641,Scan::13852,Scan::14724,Scan::15460,Scan::15894,Scan::15970,Scan::16324,Scan::16326,Scan::16327,Scan::16328,Scan::16329,Scan::18020,Scan::18021,Scan::18023,Scan::18025,Scan::18027,Scan::18028,Scan::18215,Scan::18482,Scan::18483,Scan::18490,Scan::18502,Scan::18681,Scan::18682,Scan::19401,Scan::19402,Scan::19406,Scan::19408,Scan::20005,Scan::20172,Scan::20299,Scan::20368,Scan::20382,Scan::20389,Scan::20390,Scan::20904,Scan::20905,Scan::21213,Scan::21332,Scan::21685,Scan::21687,Scan::22030,Scan::22034,Scan::22183,Scan::22184,Scan::22185,Scan::22186,Scan::22187,Scan::22192,Scan::22194,Scan::22332,Scan::22449,Scan::22530,Scan::23644,Scan::23646,Scan::23647,Scan::23833,Scan::23835,Scan::23837,Scan::23838,Scan::23999,Scan::24000
+trigger=Nessus::10861,Nessus::10943,Nessus::11177,Nessus::11231,Nessus::11302,Nessus::11304,Nessus::11528,Nessus::11595,Nessus::11664,Nessus::11787,Nessus::11790,Nessus::11803,Nessus::11808,Nessus::11835,Nessus::11878,Nessus::11886,Nessus::11887,Nessus::11921,Nessus::12051,Nessus::12052,Nessus::12054,Nessus::12092,Nessus::12208,Nessus::12209,Nessus::13641,Nessus::13852,Nessus::14724,Nessus::15460,Nessus::15894,Nessus::15970,Nessus::16324,Nessus::16326,Nessus::16327,Nessus::16328,Nessus::16329,Nessus::18020,Nessus::18021,Nessus::18023,Nessus::18025,Nessus::18027,Nessus::18028,Nessus::18215,Nessus::18482,Nessus::18483,Nessus::18490,Nessus::18502,Nessus::18681,Nessus::18682,Nessus::19401,Nessus::19402,Nessus::19406,Nessus::19408,Nessus::20005,Nessus::20172,Nessus::20299,Nessus::20368,Nessus::20382,Nessus::20389,Nessus::20390,Nessus::20904,Nessus::20905,Nessus::21213,Nessus::21332,Nessus::21685,Nessus::21687,Nessus::22030,Nessus::22034,Nessus::22183,Nessus::22184,Nessus::22185,Nessus::22186,Nessus::22187,Nessus::22192,Nessus::22194,Nessus::22332,Nessus::22449,Nessus::22530,Nessus::23644,Nessus::23646,Nessus::23647,Nessus::23833,Nessus::23835,Nessus::23837,Nessus::23838,Nessus::23999,Nessus::24000
 actions=trap,email,log
 enabled=Y
 # for faster remediation, it is recommended to leave an offending client in the registration vlan (where it is scanned)
