@@ -118,7 +118,8 @@ $floating_devices_file  = $conf_dir . "/floating_network_device.conf";
 $oui_url               = 'http://standards.ieee.org/regauth/oui/oui.txt';
 $dhcp_fingerprints_url = 'http://www.packetfence.org/dhcp_fingerprints.conf';
 
-Readonly our @VALID_TRIGGER_TYPES => ( "scan", "detect", "internal", "os", "vendormac", "mac", "useragent", "soh" );
+Readonly our @VALID_TRIGGER_TYPES => ( "detect", "internal", "mac", "nessus", "openvas", "os", "soh", "useragent", 
+        "vendormac" );
 
 $portscan_sid = 1200003;
 $default_pid  = 1;
